--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: painelbot
     env: python
-    plan: free
     buildCommand: ""
     startCommand: python main.py
+    runtime: python
+    pythonVersion: 3.11.9
