--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,6 @@ services:
   - type: web
     name: painelbot
     env: python
-    buildCommand: ""
-    startCommand: python main.py
-    runtime: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python main.py"
     pythonVersion: 3.11.9
